# half-life-3

./: CMakeLists.txt  README.md  a.out  main.cpp
src/: Ally.cpp  Ally.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  IHealthable.hpp  IMovable.hpp  Player.cpp  Player.hpp
